# mlops-zoomcamp-fork

./: pyproject.toml
homework/01-intro/: duration-prediction.ipynb  homework01.ipynb
notebooks/: duration-prediction-mlflow.ipynb  duration-prediction.ipynb
