[tool.poetry]
name = "mlops-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mlops_zoomcamp"}]

[tool.poetry.dependencies]
python = ">=3.8"
pandas = "^2.0.1"
numpy = "^1.24.3"
sklearn = "^0.0.post5"
jupyter = "^1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
