[tool.poetry]
name = "mlops-zoomcamp"
version = "0.1.0"
description = ""
authors = ["Marc Soler"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
pandas = "^2.0.1"
numpy = "^1.24.3"
scikit-learn = "^1.2"
jupyter = "^1.0"
seaborn = "0.12.2"
matplotlib = "3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
